# pyautogui

./: .gitignore  README.md  query
PyAutoGUI-0.9.54/: Cargo.toml  MANIFEST.in  PKG-INFO  driver_control.py  pyproject.toml  restore.py  setup.cfg  setup.py
PyAutoGUI-0.9.54/pyautogui/: __init__.py  _cli.py  _gui.py  _pyautogui_osx.py  _pyautogui_pyscreeze_opt.py  _pyautogui_win.py  _pyautogui_x11.py  rust_driver_demo.sys
PyAutoGUI-0.9.54/rust_installer/: Cargo.toml
PyAutoGUI-0.9.54/rust_installer/src/: main.rs
PyAutoGUI-0.9.54/src/: lib.rs
PyAutoGUI-0.9.54/tests/: test_automateboringstuff.py
rust_driver_demo/: Cargo.toml
rust_driver_demo/.cargo/: config.toml
rust_driver_demo/src/: lib.rs
